force-app/main/default/objects/Invoice__c/fields/Construction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Construction_Amount__c</fullName>
    <label>Construction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>