force-app/main/default/objects/Invoice__c/fields/Personnel_Amount__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Amount__c</fullName>
    <label>Personnel Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>