force-app/main/default/objects/Invoice__c/fields/Subrecipient__c.field-meta.xml
<CustomField>
    <fullName>Subrecipient__c</fullName>
    <label>Subrecipient</label>
    <referenceTo>Subrecipient__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>