force-app/main/default/objects/Invoice__c/validationRules/Construction_amount_cannot_exceed_funds.validationRule-meta.xml
<ValidationRule>
    <fullName>Construction_amount_cannot_exceed_funds</fullName>
    <active>true</active>
    <errorConditionFormula>Construction_Amount__c  &gt;  Project__r.Construction_Funds_Remaining__c</errorConditionFormula>
    <errorMessage>Construction Amount cannot exceed Construction Funds Remaining</errorMessage>
</ValidationRule>