force-app/main/default/objects/Invoice__c/validationRules/Equip_amount_cannot_exceed_funds.validationRule-meta.xml
<ValidationRule>
    <fullName>Equip_amount_cannot_exceed_funds</fullName>
    <active>true</active>
    <description>Equipment Amount cannot exceed Equipment Funds Remaining</description>
    <errorConditionFormula>Equipment_Amount__c  &gt;  Project__r.Equipment_Funds_Remaining__c</errorConditionFormula>
    <errorMessage>Equipment Amount cannot exceed Equipment Funds Remaining</errorMessage>
</ValidationRule>