force-app/main/default/objects/Invoice__c/validationRules/Personnel_amount_cannot_exceed_funds.validationRule-meta.xml
<ValidationRule>
    <fullName>Personnel_amount_cannot_exceed_funds</fullName>
    <active>true</active>
    <description>Personnel Amount cannot exceed Personnel Funds Remaining</description>
    <errorConditionFormula>Personnel_Amount__c  &gt;  Project__r.Personnel_Funds_Remaining__c</errorConditionFormula>
    <errorMessage>Personnel Amount cannot exceed Personnel Funds Remaining</errorMessage>
</ValidationRule>